add image background and css.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html lang="en">
 <head>
   <title>stephen hu</title>
+  <link rel="stylesheet" href="styles/stephenhu.css"/>
 </head>
 <body>
   <p>hello world</p>
 </body>
 </html>
+
