add about page and bootstrap layout.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <html lang="en">
 <head>
   <title>stephen hu</title>
+  <link rel="stylesheet" href="bootstrap/css/bootstrap.css" media="screen"/>
   <link rel="stylesheet" href="styles/stephenhu.css"/>
 </head>
 <body>
-  <p>hello world</p>
+<div class="navbar navbar-fixed-bottom">
+  <div class="navbar-inner">
+    <a class="brand" href="#">stephenhu</a>
+    <ul class="nav">
+      <li><a href="blog.html">blog</a></li>      
+      <li><a href="">projects</a></li>
+      <li><a href="">portfolio</a></li>
+      <li><a href="">about</a></li>
+    </ul>
+  </div>
+</div>
 </body>
 </html>
 
