use bootstrap from netdna and update active link for navbar.

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
   <title>stephen hu</title>
-  <link rel="stylesheet" href="bootstrap/css/bootstrap.css" media="screen"/>
+  <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" media="screen"/>
   <link rel="stylesheet" href="styles/stephenhu.css"/>
 </head>
 <body>
@@ -32,10 +32,11 @@
   <div class="navbar-inner">
     <a class="brand" href="#">stephenhu</a>
     <ul class="nav">
+      <li><a href="index.html">home</a></li>
       <li><a href="blog.html">blog</a></li>      
       <li><a href="portfolio.html">portfolio</a></li>
       <li><a href="contact.html">contact</a></li>
-      <li><a href="about.html">about</a></li>
+      <li class="active"><a href="about.html">about</a></li>
     </ul>
   </div>
 </div>
