--- a/laptop.html
+++ b/laptop.html
@@ -52,40 +52,8 @@
         </div>
       </a>
     </div>
-    <div class='blue s box'>
-      <a href='stephen.html'>
-        <h3>Welcome!</h3>
-      </a>
-      <date>2014-01-04 14:55:39 +0800</date>
-      <p>welcome, this is my very first blog post here!  i&#39;ve been blogging
-      for a fairly long time, my very first blog was written in pure html
-      back in my college days (circa &#39;96).  i still remember my first text
-      editor, it was this gui called crisp that ran on windows, syntax
-      highlighting and all!  later on, after graduating, i dabbled a little
-      in php and wrote my own blogging app with mysql backend, this was
-      all hosted from godaddy, i would upload new files using ftp to a
-      linux server running apache in one of godaddy&#39;s datacenters, this
-      server was probably hosting several hundred other sites as well.</p>
-      
-      <p>i had stopped blogging for some time around 2008 or so, part of the
-      reasoning was probably because my domain expired, but also because
-      micro-blogging tools like facebook and twitter had pretty much taken
-      over as communication tools because they were quick and simple (granted
-      these tools were blocked in china which is why i never really used these).
-      however, sometimes, writing a lengthy post about some particular topic
-      without the constraints or associations that come along with
-      micro-blogging tools is actually quite refreshing.  tools like tumblr
-      and posterous have made blogging easier, and static site generators
-      like jekyll have brought back blogging in a new and interesting way.</p>
-      
-      <p>anyway, it&#39;s great to be back, and i&#39;m actually quite excited to be
-      blogging again, and on top of that, i&#39;ve been working on a tool to
-      help aide in the process called <a href="https://github.com/stephenhu/meta">meta</a>.</p>
-    </div>
-    <div class='blue s box'>
-      <a href='laptop.html'>
-        <h3>Ideal Laptop</h3>
-      </a>
+    <div class='black box xl'>
+      <h3>Ideal Laptop</h3>
       <date>2013-12-20 22:39:00 +0800</date>
       <p>i&#39;ve been using macbooks for a very long time, my current one from work is
       a fully spec&#39;d out macbook pro retina, 15&quot; screen, 512 gb ssd, 16 gb ram,
