--- a/stephen.html
+++ b/stephen.html
@@ -10,9 +10,7 @@
       <div class='navbar-header'>
         <a class='navbar-brand' href='index.html'>
           <div class='logo'>
-            STEPHEN
-            <span class='off-logo'>HU</span>
-            - INNOVATION, DESIGN, GENERALE
+            STEPHEN<span class="off-logo">HU</span> - INNOVATION, DESIGN, GENERALE
           </div>
         </a>
       </div>
