change metc to meta

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           
           <p>anyway, it&#39;s great to be back, and i&#39;m actually quite excited to be
           blogging again, and on top of that, i&#39;ve been working on a tool to
-          help aide in the process called <a href="https://github.com/stephenhu/metc">metc</a>.</p>
+          help aide in the process called <a href="https://github.com/stephenhu/meta">meta</a>.</p>
         </div>
       </div>
     </div>
