--- a/stephen.html
+++ b/stephen.html
@@ -19,7 +19,7 @@
       <a href='index.html'>
         <h2>STEPHENHU</h2>
       </a>
-      <h4>INNOVATION, CREATIVITY, UNIQUENESS</h4>
+      <h4>Innovation, Creativity, Uniqueness</h4>
       <h5>copyright &copy; 2014</h5>
       <a href='https://github.com/stephenhu'>
         <img src='images/glyphicons_social_21_github.png'>
@@ -33,7 +33,6 @@
       <a href='http://flickr.com/photos/blueconfusion'>
         <img src='images/glyphicons_social_35_flickr.png'>
       </a>
-      <br>
       <br>
       <br>
       <a class='gauge' href=''>
