--- a/laptop.html
+++ b/laptop.html
@@ -54,7 +54,7 @@
     </div>
     <div class='black box xl'>
       <h3>Ideal Laptop</h3>
-      <date>2014-01-07 15:38:12 +0800</date>
+      <date>Tue Jan  7 15:38:12 2014</date>
       <p>i&#39;ve been using macbooks for a very long time, my current one from work is
       a fully spec&#39;d out macbook pro retina, 15&quot; screen, 512 gb ssd, 16 gb ram,
       i7 quad core running at 2.7 ghz, a very well built piece of machinery from
