--- a/stephen.html
+++ b/stephen.html
@@ -54,7 +54,7 @@
     </div>
     <div class='black box xl'>
       <h3>Welcome!</h3>
-      <date>2014-01-04 14:55:39 +0800</date>
+      <date>Sat Jan  4 14:55:39 2014</date>
       <p>welcome, this is my very first blog post here!  i&#39;ve been blogging
       for a fairly long time, my very first blog was written in pure html
       back in my college days (circa &#39;96).  i still remember my first text
