--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h2>STEPHENHU</h2>
       </a>
       <h4>Innovation, Creativity, Uniqueness</h4>
-      <h5>copyright &copy; 2014</h5>
+      <h5>Copyright &copy; 2014</h5>
       <a href='https://github.com/stephenhu'>
         <img src='images/glyphicons_social_21_github.png'>
       </a>
