layout fix, adhere to new meta

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <a href='laptop.html'>
         <h3>Ideal Laptop</h3>
       </a>
-      <date>Tue Jan  7 15:38:12 2014</date>
+      <date>Fri Jan 24 07:05:40 2014</date>
       <p>i&#39;ve been using macbooks for a very long time, my current one from work is
       a fully spec&#39;d out macbook pro retina, 15&quot; screen, 512 gb ssd, 16 gb ram,
       i7 quad core running at 2.7 ghz, a very well built piece of machinery from
@@ -123,9 +123,9 @@
     </div>
     <div class='blue s box'>
       <a href='stephen.html'>
-        <h3>Welcome!</h3>
+        <h3>Welcome</h3>
       </a>
-      <date>Sat Jan  4 14:55:39 2014</date>
+      <date>Fri Jan 24 07:05:35 2014</date>
       <p>welcome, this is my very first blog post here!  i&#39;ve been blogging
       for a fairly long time, my very first blog was written in pure html
       back in my college days (circa &#39;96).  i still remember my first text
