--- a/stephen.html
+++ b/stephen.html
@@ -15,7 +15,7 @@
     ga('send', 'pageview');
   </script>
   <body>
-    <div class='green m box'>
+    <div class='green xl box'>
       <a href='index.html'>
         <h2>STEPHENHU</h2>
       </a>
@@ -53,8 +53,8 @@
       </a>
     </div>
     <div class='black box xl'>
-      <h3>Welcome!</h3>
-      <date>Sat Jan  4 14:55:39 2014</date>
+      <h3>Welcome</h3>
+      <date>Fri Jan 24 07:05:35 2014</date>
       <p>welcome, this is my very first blog post here!  i&#39;ve been blogging
       for a fairly long time, my very first blog was written in pure html
       back in my college days (circa &#39;96).  i still remember my first text
