more images for blog posts

--- a/airbnb.html
+++ b/airbnb.html
@@ -55,6 +55,8 @@
     <div class='black box xl'>
       <h3>Experiences with Airbnb</h3>
       <date>Tue Feb  4 13:08:25 2014</date>
+      <p><img src="https://a0.muscache.com/airbnb/static/about/resources/airbnb-logo-293-1d7ea0761fc6bc1efde1d6e706479392.png" alt="Airbnb"></p>
+      
       <p>i first found airbnb on hacker news, the idea didn&#39;t seem that novel, i.e. i
       wasn&#39;t blown away by the technology or business model, more so that i needed
       a nice place to stay and the traditional hotel booking sites never made me feel
