--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
         <h3>Experiences with Airbnb</h3>
       </a>
       <date>Tue Feb  4 13:08:25 2014</date>
+      <p><img src="https://a0.muscache.com/airbnb/static/about/resources/airbnb-logo-293-1d7ea0761fc6bc1efde1d6e706479392.png" alt="Airbnb"></p>
+      
       <p>i first found airbnb on hacker news, the idea didn&#39;t seem that novel, i.e. i
       wasn&#39;t blown away by the technology or business model, more so that i needed
       a nice place to stay and the traditional hotel booking sites never made me feel
@@ -205,6 +207,8 @@
         <h3>China 4G</h3>
       </a>
       <date>Sat Feb  1 09:28:21 2014</date>
+      <p><img src="http://www.hk.chinamobile.com/export/system/modules/com.cmhk.page.template.common/resources/en/images/logo.png" alt="China Mobile"></p>
+      
       <p>china mobile is the world&#39;s largest mobile carrier with over 700m users.  when
       i moved to china in 2007, there were two other carriers, China Unicom and China
       Telecom, service was limited to 2g (GSM/CDMA/EDGE), but neither was even worthy
