--- a/tdlte.html
+++ b/tdlte.html
@@ -55,6 +55,8 @@
     <div class='black box xl'>
       <h3>China 4G</h3>
       <date>Sat Feb  1 09:28:21 2014</date>
+      <p><img src="http://www.hk.chinamobile.com/export/system/modules/com.cmhk.page.template.common/resources/en/images/logo.png" alt="China Mobile"></p>
+      
       <p>china mobile is the world&#39;s largest mobile carrier with over 700m users.  when
       i moved to china in 2007, there were two other carriers, China Unicom and China
       Telecom, service was limited to 2g (GSM/CDMA/EDGE), but neither was even worthy
