some grammar corrections for the mac pro article.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       was plenty of software for that, but everything else was purely experimental.  later on,
       10.1 came out that made things better, more native software and developers had jumped
       onto the apple bandwagon semi-full force.  a few years later, i sold my quicksilver
-      and purchased a mirrored door powermac g4, the machine was pretty cool, this was a dual
+      and purchased a mirrored door powermac g4, this machine was pretty cool, a dual
       processor workstation where at the time very few were to be had.  i had a diy server
       that i pieced together based on a tyan motherboard with 2 sockets for dual pentium 3
       cpu&#39;s, but anything else from a hardware manufacturer was completely out of my price
@@ -86,12 +86,12 @@
       hoping that the system would use off the shelf parts and get rid of some of the
       nuttiness from the previous generations.  boy was i wrong, the same old nuttiness,
       memory timing issues with non-mac memory, incompatibility with off the shelf pci-x
-      graphics cards, and even worse, this machine was purchased in 2006, and i find that
-      the operating system can&#39;t be upgraded to the latest mac os x mavericks.  the
+      graphics cards, and even worse, this machine was purchased in 2006, and i found
+      out that the operating system can&#39;t be upgraded to the latest mac os x mavericks.  the
       reason is because the mac pro 1 1 runs EFI32 bit firmware which can only boot
       32 bit operating systems.  mac os x made the switch over in 10.8 to full 64 bit
       support which made the mac pro 1 1 incompatible.  the machine is fully capable,
-      11 GB of ram, dual quad-core processors (64 bit enabled), and still boasts
+      11 GB of ram (16 GB total), dual quad-core processors (64 bit enabled), and still boasts
       excellent performance, but because of this silly firmware issue, is really a
       piece of garbage.  i have no upgrade path to the latest os x version and i can&#39;t
       even install 64 bit windows or linux operating systems.</p>
@@ -101,7 +101,7 @@
       sports an interesting cylindrical shape which looks nice, but i question how
       upgradeable this machine will be.  using apple hardware for laptops is alright
       since the upgrades are really incremental and not complete replacements, but
-      i&#39;m giving up on mac workstations.  not only the cost really ridiculous, i
+      i&#39;m giving up on mac workstations.  not only is the cost really ridiculous, i
       could probably get the same power in a setup that costs a third less.</p>
     </div>
     <div class='blue s box'>
