--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <br>
       <a class='gauge' href=''>
         <div class='value'>
-          6
+          7
         </div>
         <div class='key'>
           POSTS
@@ -51,6 +51,35 @@
           PHOTOS
         </div>
       </a>
+    </div>
+    <div class='blue s box'>
+      <a href='mockups.html'>
+        <h3>Code Your Mockups</h3>
+      </a>
+      <date>Thu Feb 27 22:17:05 2014</date>
+      <p>mockups, typically created by designers, are done using one of these
+      tools:  adobe illustrator, balsamiq, gomockingbird, powerpoint, visio, hand
+      drawing, etc.  quite honestly, i couldn&#39;t really tell you the difference between
+      mockups and wireframes, maybe wireframes are rough approximations with no
+      attention to colors, fonts, or any of the final visualization details while
+      mockups are close to the real thing.  but all of the above methods
+      are a bit too cumbersome to me, what i prefer these days, as designer and full
+      stack developer, is to directly write html, css, js, and bootstrap.  links are
+      hardcoded, some of the ajax requests and data are mocked so i&#39;m actually interacting
+      with pretty much the final product down to the color.  this allows me to iterate
+      much more quickly and i&#39;m also writing some of the code that eventually gets
+      templatized so i&#39;m saving lots of cycles by not having to spin in yet another
+      tool that&#39;s really just a bunch of approximations.  and what better thing to do
+      than to use firebug or inspect element than to view a bunch of rulers with
+      margin width designations.</p>
+      
+      <p>granted, this method is not as fast initially as a hand drawing, but it&#39;s a lot more
+      accurate.  i think in the grand scheme of things, you&#39;ll end up saving more
+      time than hand drawings because with a hand drawn mockup, you&#39;d still have to
+      translate the drawings into html code.  i think the only real
+      argument about using html/css/js directly for mockups is that the designer
+      would have to have this skill set, but this is the 21st century, get with the
+      times man!</p>
     </div>
     <div class='blue s box'>
       <a href='macpro.html'>
