--- a/gangsters.html
+++ b/gangsters.html
@@ -53,32 +53,24 @@
       </a>
     </div>
     <div class='black box xl'>
-      <h3>Welcome</h3>
-      <date>Fri Jan 24 07:05:35 2014</date>
-      <p>welcome, this is my very first blog post here!  i&#39;ve been blogging
-      for a fairly long time, my very first blog was written in pure html
-      back in my college days (circa &#39;96).  i still remember my first text
-      editor, it was this gui called crisp that ran on windows, syntax
-      highlighting and all!  later on, after graduating, i dabbled a little
-      in php and wrote my own blogging app with mysql backend, this was
-      all hosted from godaddy, i would upload new files using ftp to a
-      linux server running apache in one of godaddy&#39;s datacenters, this
-      server was probably hosting several hundred other sites as well.</p>
+      <h3>Gangsters as Leaders and Managers</h3>
+      <date>Thu Feb 27 22:42:25 2014</date>
+      <p><img src="http://upload.wikimedia.org/wikipedia/en/2/2d/Boardwalk_Empire_2010_Intertitle.png" alt="Boardwalk Empire"></p>
       
-      <p>i had stopped blogging for some time around 2008 or so, part of the
-      reasoning was probably because my domain expired, but also because
-      micro-blogging tools like facebook and twitter had pretty much taken
-      over as communication tools because they were quick and simple (granted
-      these tools were blocked in china which is why i never really used these).
-      however, sometimes, writing a lengthy post about some particular topic
-      without the constraints or associations that come along with
-      micro-blogging tools is actually quite refreshing.  tools like tumblr
-      and posterous have made blogging easier, and static site generators
-      like jekyll have brought back blogging in a new and interesting way.</p>
-      
-      <p>anyway, it&#39;s great to be back, and i&#39;m actually quite excited to be
-      blogging again, and on top of that, i&#39;ve been working on a tool to
-      help aide in the process called <a href="https://github.com/stephenhu/meta">meta</a>.</p>
+      <p>i&#39;m watching this hbo series called boardwalk empire which talks about the
+      life of this corrupt atlantic city treasurer that&#39;s really just an irish gangster set
+      in the times of the prohibition period in america.  a really good show with excellent
+      casting (steve buscemi amongst others).  anyway, the story&#39;s pretty engaging
+      and the acting is quite excellent.  and i&#39;ve always been a big fan of gangster/mafia
+      genres, but i tend to look at the movies now from the perspective of leadership
+      and management because gangsters are also good leaders and managers in their own right.  they often
+      times exhibit the skills necessary to lead and manage companies albeit some of
+      the methods used are a bit illegal, but in terms of the behaviors and attitudes
+      towards many situations are quite effective.  for example, high influence,
+      experienced resolving conflict, quick decision makers, tough negotiators, provide
+      instant feedback, operational excellence, good at creating hierarchy,
+      good at recruiting, good at making tough decisions, good vision, good awareness
+      of decision makers and stakeholders, good execution.</p>
     </div>
   </body>
 </html>
