--- a/gangsters.html
+++ b/gangsters.html
@@ -1,76 +1,58 @@
 <!DOCTYPE html>
-<html lang='en'>
-  <head>
-    <title>stephenhu.info</title>
-    <link href='//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css' rel='stylesheet'>
-    <link href='css/stephenhu2.css' rel='stylesheet'>
-  </head>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    
-    ga('create', 'UA-46746565-1', 'stephenhu.info');
-    ga('send', 'pageview');
-  </script>
-  <body>
-    <div class='green xl box'>
-      <a href='index.html'>
-        <h2>STEPHENHU</h2>
-      </a>
-      <h4>Innovation, Creativity, Uniqueness</h4>
-      <h5>Copyright &copy; 2014</h5>
-      <a href='https://github.com/stephenhu'>
-        <img src='images/glyphicons_social_21_github.png'>
-      </a>
-      <a href='https://cn.linkedin.com/in/hustephen'>
-        <img src='images/glyphicons_social_17_linked_in.png'>
-      </a>
-      <a href='mailto:epynonymous@outlook.com'>
-        <img src='images/glyphicons_social_39_e-mail.png'>
-      </a>
-      <a href='http://flickr.com/photos/blueconfusion'>
-        <img src='images/glyphicons_social_35_flickr.png'>
-      </a>
-      <br>
-      <br>
-      <a class='gauge' href=''>
-        <div class='value'>
-          8
-        </div>
-        <div class='key'>
-          POSTS
-        </div>
-      </a>
-      <a class='gauge' href=''>
-        <div class='value'>
-          0
-        </div>
-        <div class='key'>
-          PHOTOS
-        </div>
-      </a>
-    </div>
-    <div class='black box xl'>
-      <h3>Gangsters as Leaders and Managers</h3>
-      <date>Thu Feb 27 22:42:25 2014</date>
-      <p><img src="http://upload.wikimedia.org/wikipedia/en/2/2d/Boardwalk_Empire_2010_Intertitle.png" alt="Boardwalk Empire"></p>
-      
-      <p>i&#39;m watching this hbo series called boardwalk empire which talks about the
-      life of this corrupt atlantic city treasurer that&#39;s really just an irish gangster set
-      in the times of the prohibition period in america.  a really good show with excellent
-      casting (steve buscemi amongst others).  anyway, the story&#39;s pretty engaging
-      and the acting is quite excellent.  and i&#39;ve always been a big fan of gangster/mafia
-      genres, but i tend to look at the movies now from the perspective of leadership
-      and management because gangsters are also good leaders and managers in their own right.  they often
-      times exhibit the skills necessary to lead and manage companies albeit some of
-      the methods used are a bit illegal, but in terms of the behaviors and attitudes
-      towards many situations are quite effective.  for example, high influence,
-      experienced resolving conflict, quick decision makers, tough negotiators, provide
-      instant feedback, operational excellence, good at creating hierarchy,
-      good at recruiting, good at making tough decisions, good vision, good awareness
-      of decision makers and stakeholders, good execution.</p>
-    </div>
-  </body>
+<html lang="en">
+	<head>
+		<title>stephenhu - innovation, creativity, uniqueness</title>
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
+		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+		<link href="css/stephenhu2.css" rel="stylesheet" />
+		<link href="css/madnba.css" rel="stylesheet" />
+	</head>
+	<body>
+		<div class="green xl box">
+			<a href="https://stephenhu.github.io">
+				<h2>stephenhu</h2>
+			</a>
+			<h4>innovation, creativity, uniqueness</h4>
+			<h5>copyright &copy; 2017</h5>
+			<a href="mailto:stephen@madsportslab.com">
+				<span class="fa fa-envelope fa-2x"></span>
+			</a>
+			<a href="https://twitter.com/madsportslab">
+				<span class="fa fa-twitter fa-2x"></span>
+			</a>
+			<a href="https://cn.linkedin.com/in/hustephen">
+				<span class="fa fa-linkedin fa-2x"></span>
+			</a>
+			<a href="https://github.com/stephenhu">
+				<span class="fa fa-github fa-2x"></span>
+			</a>
+		</div>
+		<div class="black xl box">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h1>Gangsters as Leaders and Managers</h1>
+
+<h4>Feb 27, 2014</h4>
+
+<p><img src="http://upload.wikimedia.org/wikipedia/en/2/2d/Boardwalk_Empire_2010_Intertitle.png" alt="Boardwalk Empire" /></p>
+
+<p>i&rsquo;m watching this hbo series called boardwalk empire which talks about the
+life of this corrupt atlantic city treasurer that&rsquo;s really just an irish gangster set
+in the times of the prohibition period in america.  a really good show with excellent
+casting (steve buscemi amongst others).  anyway, the story&rsquo;s pretty engaging
+and the acting is quite excellent.  and i&rsquo;ve always been a big fan of gangster/mafia
+genres, but i tend to look at the movies now from the perspective of leadership
+and management because gangsters are also good leaders and managers in their own right.  they often
+times exhibit the skills necessary to lead and manage companies albeit some of
+the methods used are a bit illegal, but in terms of the behaviors and attitudes
+towards many situations are quite effective.  for example, high influence,
+experienced resolving conflict, quick decision makers, tough negotiators, provide
+instant feedback, operational excellence, good at creating hierarchy,
+good at recruiting, good at making tough decisions, good vision, good awareness
+of decision makers and stakeholders, good execution.</p>
+</div>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
